add CommonGen